# interpolate-topography

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: background_mesh.h  config_file.h  constants.h  mesh.h  msh_constants.h  msh_parser.h  msh_tokenizer.h  resistivity.h  resistivity_parser.h  topography.h  topography_parser.h  utils.h
src/: CMakeLists.txt  background_mesh.c  config_file.c  main.c  mesh.c  msh_parser.c  msh_tokenizer.c  resistivity.c  resistivity_parser.c  topography.c  topography_parser.c  utils.c
tests/: CMakeLists.txt  mesh_tests.c  msh_parser_tests.c  msh_tokenizer_tests.c  test.msh  test_raw_topography  test_skin.msh  test_skin_topo.msh  test_skin_topo_smooth.msh  test_skin_topography  test_skin_topography_raw  test_topography  topography_parser_tests.c  topography_tests.c
